Fixed image stretching

--- a/frontend/src/components/UserCard/styles.scss
+++ b/frontend/src/components/UserCard/styles.scss
@@ -15,6 +15,10 @@
         font-family: $title-font;
     }
 
+    .cardImg {
+        object-fit: cover;
+    }
+
     .userLink:hover {
         text-decoration: underline;
     }
